// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LedgerConnectionStep should emit event on connect 1`] = `
<div>
  <section
    class="space-y-8"
    data-testid="LedgerConnectionStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-3xl"
          data-testid="header__title"
        >
          Open App on Ledger
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Open the app on your Ledger and check for details.
        </div>
      </div>
    </div>
    <fieldset
      class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
      </label>
      <div>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="ImportWallet__network-menu"
          data-testid="SelectNetwork"
          role="combobox"
        >
          <label
            for="ImportWallet__network-input"
            id="ImportWallet__network-label"
          />
          <div
            class="fixed invisible w-auto whitespace-nowrap"
          >
            
            …
          </div>
          <div
            class="Input__InputWrapperStyled-wu99qs-0 iRRxpY"
            disabled=""
          >
            <div
              aria-label="ARK Devnet"
              class="Circle__CircleWrapper-uw7h4j-0 grnDUY border-theme-secondary-200 text-theme-secondary-500 ring-theme-background dark:border-theme-secondary-700"
              data-testid="SelectNetworkInput__network"
            >
              <div
                class="sc-bdfBwQ iyevwF"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
            <div
              class="flex relative flex-1 h-full"
            >
              <input
                aria-autocomplete="list"
                aria-controls="ImportWallet__network-menu"
                aria-labelledby="ImportWallet__network-label"
                autocomplete="off"
                class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures text-theme-secondary-text"
                data-testid="SelectNetworkInput__input"
                disabled=""
                id="ImportWallet__network-input"
                placeholder="Enter a cryptoasset name"
                value=""
              />
              
            </div>
          </div>
        </div>
        <div
          class=""
          data-testid="SelectNetwork__options"
        >
          <div
            class=""
          >
            <ul
              aria-labelledby="ImportWallet__network-label"
              class="grid grid-cols-6 gap-3"
              id="ImportWallet__network-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
    </fieldset>
    <div
      class="flex overflow-hidden flex-col p-4 space-y-4 rounded-lg sm:flex-row sm:items-center sm:space-y-0 sm:space-x-4 bg-theme-success-50 dark:bg-theme-secondary-800"
    >
      <div
        class="flex flex-shrink-0 justify-center items-center w-11 h-11 text-white rounded-lg bg-theme-success-600"
      >
        <div
          class="sc-bdfBwQ hteSKx"
          height="1.25em"
          width="1.25em"
        >
          <svg>
            alert-success.svg
          </svg>
        </div>
      </div>
      <div
        class="flex flex-col w-full"
      >
        <div
          class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
        >
          Successfully connected
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`LedgerConnectionStep should emit event on fail 1`] = `
<div>
  <section
    class="space-y-8"
    data-testid="LedgerConnectionStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-3xl"
          data-testid="header__title"
        >
          Open App on Ledger
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Open the app on your Ledger and check for details.
        </div>
      </div>
    </div>
    <fieldset
      class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
      </label>
      <div>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="ImportWallet__network-menu"
          data-testid="SelectNetwork"
          role="combobox"
        >
          <label
            for="ImportWallet__network-input"
            id="ImportWallet__network-label"
          />
          <div
            class="fixed invisible w-auto whitespace-nowrap"
          >
            
            …
          </div>
          <div
            class="Input__InputWrapperStyled-wu99qs-0 iRRxpY"
            disabled=""
          >
            <div
              aria-label="ARK Devnet"
              class="Circle__CircleWrapper-uw7h4j-0 grnDUY border-theme-secondary-200 text-theme-secondary-500 ring-theme-background dark:border-theme-secondary-700"
              data-testid="SelectNetworkInput__network"
            >
              <div
                class="sc-bdfBwQ iyevwF"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
            <div
              class="flex relative flex-1 h-full"
            >
              <input
                aria-autocomplete="list"
                aria-controls="ImportWallet__network-menu"
                aria-labelledby="ImportWallet__network-label"
                autocomplete="off"
                class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures text-theme-secondary-text"
                data-testid="SelectNetworkInput__input"
                disabled=""
                id="ImportWallet__network-input"
                placeholder="Enter a cryptoasset name"
                value=""
              />
              
            </div>
          </div>
        </div>
        <div
          class=""
          data-testid="SelectNetwork__options"
        >
          <div
            class=""
          >
            <ul
              aria-labelledby="ImportWallet__network-label"
              class="grid grid-cols-6 gap-3"
              id="ImportWallet__network-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
    </fieldset>
    <div
      class="flex overflow-hidden flex-col p-4 space-y-4 rounded-lg sm:flex-row sm:items-center sm:space-y-0 sm:space-x-4 bg-theme-danger-50 dark:bg-theme-secondary-800"
    >
      <div
        class="flex flex-shrink-0 justify-center items-center w-11 h-11 text-white rounded-lg bg-theme-danger-400"
      >
        <div
          class="sc-bdfBwQ hteSKx"
          height="1.25em"
          width="1.25em"
        >
          <svg>
            alert-danger.svg
          </svg>
        </div>
      </div>
      <div
        class="flex flex-col w-full"
      >
        <div
          class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
        >
          Failed
        </div>
      </div>
    </div>
  </section>
</div>
`;
